plugins {
    id 'java'
    id 'idea'
}

group 'top.abosen'
version '1.0'

// 手动设置 preview 版本
sourceCompatibility = '1.14--enable-preview'

repositories {
    maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
    mavenCentral()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

idea {
    module {
        excludeDirs += file("src/main/java/leetcode/editor/cn/doc")
    }
}
dependencies {

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.3'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.3'
    implementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'junit', name: 'junit', version: '4.12'

    testImplementation 'org.hamcrest:hamcrest:2.2'
    implementation 'org.hamcrest:hamcrest:2.2'
}
